...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.chooselibrary.ChooseServerActivity">

        <TextView
            android:id="@+id/choose_server_title"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/screen_horizontal_padding"
            android:layout_marginTop="@dimen/app_bar_height"
            android:layout_marginRight="@dimen/screen_horizontal_padding"
...
